--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "sastrawi/sastrawi": "^1.2",
         "shuchkin/simplexlsx": "^1.0"
     },
     "require-dev": {
